--- a/static/assignment564/fe564.Rmd
+++ b/static/assignment564/fe564.Rmd
@@ -510,7 +510,7 @@ library(dplyr)
 
 #### (d) (2) Collinearity diagnostics
 
-```{r , eval=T, echo=F, include = T}
+```{r , eval=F, include = T}
 library(MASS)
 # remove 1-9
 model_wf_rm1_log <- lm(log(y) ~ X2 + X3 + X4 + X5 + X6 + X7 + X8 + X9, data=table_wf)
