--- a/docs/assignment561/fe561.Rmd
+++ b/docs/assignment561/fe561.Rmd
@@ -13,13 +13,13 @@ output: html_document
 
 For k is an integer, when $k\ge0$
 
-$$\Gamma(\frac{2k+1}2)=\frac{2k-1}2\Gamma(\frac{2k-1}2)=\frac{2k-1}2\frac{2k-3}2\Gamma(\frac{2k-3}2)=...=\prod_{1}^{k}\frac{2k-1}{2}\Gamma(\frac12)=\frac{(2k)!}{4^{k}k!}\sqrt{\pi}$$
+$$\Gamma(\frac{2k+1}2)=\frac{2k-1}2\Gamma(\frac{2k-1}2)=\frac{2k-1}2\frac{2k-3}2\Gamma(\frac{2k-3}2)=...=\Gamma(\frac12)\prod_{1}^{k}\frac{2k-1}{2}=\frac{(2k)!}{4^{k}k!}\sqrt{\pi}$$
 
 When $k<0$
 
 $$\Gamma(\frac{2k+1}2)=\frac{\Gamma(\frac{2k+3}2)}{\frac{2k+1}2}=\frac{\Gamma(\frac{2k+5}2)}{\frac{2k+1}2\frac{2k+3}2}=...=\frac{\Gamma(\frac{1}2)}{\prod_{k}^{-1}\frac{2k+1}2}=\sqrt{\pi}{\prod_{1}^{-k}\frac{2}{1-2(-k)}}=\frac{(-4)^{-k}(-k)!}{(-2k)!}\sqrt{\pi}$$
 
-$$\therefore \Gamma(\frac{2k+1}2)=\begin{cases}\frac{(2k)!}{4^{k}k!}\sqrt{\pi} & when\quad k\ge0\\\frac{(-4)^{-k}(-k)!}{(-2k)!}\sqrt{\pi} &  when\quad k<0\end{cases}$$
+$$\therefore \Gamma(\frac{2k+1}2)=\begin{cases}\mathbf{\frac{(2k)!}{4^{k}k!}\sqrt{\pi}} & when\quad k\ge0\\ \mathbf{\frac{(-4)^{-k}(-k)!}{(-2k)!}\sqrt{\pi}} &  when\quad k<0\end{cases}$$
 
 ****
 
@@ -31,11 +31,11 @@ $$P(X\le10-1)=1-P(T>8)$$
 
 For T, observed 10 visits and average 1.5 visits per miniute mean $t=8,\ \alpha=10,\ \beta=1.5$. 
 
-$$1-P(T>8)=1-\frac{1}{\Gamma(10)1.5^{10}}8^{10-1}e^{-\frac{8}{1.5}}=0.2423922$$
+$$1-P(T>8)=1-\frac{1}{\Gamma(10)1.5^{10}}8^{10-1}e^{-\frac{8}{1.5}}=\mathbf{0.2423922}$$
 
 For X, no 10 visit in 8 minutes mean $x=9,\ \lambda=\frac{t}\beta=\frac8{\frac23}=12$. 
 
-$$P(X\le10-1)=\frac{12^9}{9!}e^{-12}=0.2423922$$
+$$P(X\le10-1)=\frac{12^9}{9!}e^{-12}=\mathbf{0.2423922}$$
 
 
 
@@ -60,7 +60,7 @@ Because $x>0,\beta>0,\alpha>0$,
 
 $$\implies (x^{a-1}e^{-\frac{x}\beta})'=(a-1)x^{a-2}e^{-\frac{x}\beta}+(-\frac{1}\beta)x^{a-1}e^{-\frac{x}\beta}=e^{-\frac{x}\beta}x^{a-2}(a-1-\frac{x}\beta)=0$$
 
-$$(a-1-\frac{x}\beta)=0\implies x=(\alpha-1)\beta,\quad \alpha\ge1$$
+$$(a-1-\frac{x}\beta)=0\implies \mathbf{x=(\alpha-1)\beta,\quad \alpha\ge1}$$
 
 ****
 
@@ -70,7 +70,7 @@ For $X\sim Uniform(a, b),\ b>a,\ μ=\frac{a+b}2,\sigma^2=\frac{(b-a)^2}{12}$, th
 
 $$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(X<(\mu+1.5\sigma)-P(X<(\mu-1.5\sigma)=\frac{\mu+1.5\sigma-a}{b-a}-\frac{\mu-1.5\sigma-a}{b-a}$$
 
-$$=\frac{3\sigma}{b-a}=\frac{3(b-a)}{\sqrt{12}(b-a)}=\frac{\sqrt{3}}{2}=0.8660254$$
+$$=\frac{3\sigma}{b-a}=\frac{3(b-a)}{\sqrt{12}(b-a)}=\frac{\sqrt{3}}{2}=\mathbf{0.866025}4$$
 
 <!--
 $$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(\frac{a+b}2−\frac{1.5(b-a)}{\sqrt{12}}<X<\frac{a+b}2+\frac{1.5(b-a)}{\sqrt{12}})$$
@@ -79,7 +79,7 @@ $$=P(\frac{2+\sqrt3}4a+\frac{2-\sqrt3}4b<X<\frac{2-\sqrt3}4a+\frac{2+\sqrt3}4b)$
 
 According to Chebyshev's Inequality: for constant k>0, $P(|X−\mu|<\sigma k)\ge1-\frac{1}{k^2}$. Since k=1.5, thus
 
-$$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(|X−\mu|<1.5\sigma)\ge1−\frac1{{1.5}^2}=0.5555556$$
+$$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(|X−\mu|<1.5\sigma)\ge1−\frac1{{1.5}^2}=\mathbf{0.5555556}$$
 
 The result shows that  $P(\mu−1.5\sigma<X<\mu+1.5\sigma)$ is larger than the amount guaranteed by Chebyshev's Inequality. Chebyshev's Inequality provides a conservative amount.
 
@@ -100,9 +100,9 @@ $$f_X(x)=\begin{cases}\frac13(\frac34)^{\frac{x}2}& x=2,4,6,..\\ 0 & x=1,3,5,.. 
 
 Because Y is a Geometric function, the mean and variance are
 
-$$E[Y]=\frac{1}p=4=E[\frac{X}2]=\frac{E[X]}2\implies E[X]=8$$
+$$E[Y]=\frac{1}p=4=E[\frac{X}2]=\frac{E[X]}2\implies \mathbf{E[X]=8}$$
 
-$$Var[Y]=\frac{1-p}{p^2}=12=Var[\frac{X}2]=\frac{Var[X]}4\implies Var[X]=48$$
+$$Var[Y]=\frac{1-p}{p^2}=12=Var[\frac{X}2]=\frac{Var[X]}4\implies \mathbf{Var[X]=48}$$
 
 ****
 
@@ -112,7 +112,7 @@ Accoridng the Bayes’s Rule,
 
 $$P(Disease|Positive)=\frac{P(Positive|Disease)P(Disease)}{P(Positive|Disease)P(Disease)+P(Positive|Health)P(Health)}$$
 
-$$=\frac{0.005\times 0.99}{0.005\times0.99+0.995\times0.02}=0.1991952$$
+$$=\frac{0.005\times 0.99}{0.005\times0.99+0.995\times0.02}=\mathbf{0.1991952}$$
 
 ```{r, include=FALSE}
 (0.005*0.99)/(0.005*0.99+0.995*0.02)
@@ -134,9 +134,9 @@ For lower bound by flipping the inequalities:$P[|X−E(X)|<k]>1-\frac{Var(X)}{k^
 
 $$\therefore P(|X-3|<k)=P(3−k<X<k+3)\ge1−\frac4{k^2}$$
 
-When k=5, there is a lower bound P( -2<x<8 )
+When k=5, there is a lower bound P(-2<x<8)
 
-$$P(3−k<X<k+3)=P(−2<X<8)\ge 1− \frac4{25}=0.84$$
+$$P(3−k<X<k+3)=P(−2<X<8)\ge 1− \frac4{25}=\mathbf{0.84}$$
 
 ****
 
@@ -148,7 +148,7 @@ For $X\sim Negative\ Binomial(r=2,p=\frac12)$,
 
 $$f_X(x)=\binom{x-1}{r-1}p^r(1-p)^{x-r}=\binom{x-1}{1}\frac12^2\frac12^{x-2}=(x-1)2^{-x}, x \in 2,3,4..$$
 
-$$E[X]=\frac{r}p=4;\quad Var[X]=\frac{r(1-p)}{p^2}=4$$
+$$\mathbf{E[X]}=\frac{r}p=\mathbf{4};\quad \mathbf{Var[X]}=\frac{r(1-p)}{p^2}=\mathbf{4}$$
 
 ****
 
@@ -167,9 +167,9 @@ $$F(X)=c\left[1-1+(1-p)^{a-1}\right]=c(1-p)^{a-1}=1\implies c=(1-p)^{1-a}$$
 $$\therefore f_X(x)=\begin{cases}p(1-p)^{(x+1-a)-1} & x+1-a=1,2,3..\\0 & otherwise\end{cases}$$
 Which still is a Geometric function.
 
-$$E(x+1-a)=E(x)+1-a=\frac1p \implies E(x)=\frac1p+a-1$$
+$$E(x+1-a)=E(x)+1-a=\frac1p \implies \mathbf{E(x)=\frac1p+a-1}$$
 
-$$Var(x+1-a)=Var(x)=\frac{1-p}{p^2}$$
+$$Var(x+1-a)=\mathbf{Var(x)=\frac{1-p}{p^2}}$$
 
 ****
 
@@ -190,6 +190,6 @@ If $\mu$ is a positive integer then, by virtue of $\mu-1\le x\le \mu$, the distr
 
 Since $x=1$ is the unique mode, so $x=\lfloor \mu\rfloor$ where $\lfloor\mu\rfloor$ denotes the greatest integer that does not exceed $\mu$. 
 
-Therefore, when $\mu\in(1,2)$, $x=1$ is the unique mode.
+Therefore, when $\mathbf{\mu\in(1,2)}$, $x=1$ is the unique mode.
 
 
