--- a/docs/assignment561/fe561.Rmd
+++ b/docs/assignment561/fe561.Rmd
@@ -108,7 +108,7 @@ $$Var[Y]=\frac{1-p}{p^2}=12=Var[\frac{X}2]=\frac{Var[X]}4\implies \mathbf{Var[X]
 
 #### 6. 
 
-Accoridng the Bayes’s Rule,
+Accoridng to the Bayes’s Rule,
 
 $$P(Disease|Positive)=\frac{P(Positive|Disease)P(Disease)}{P(Positive|Disease)P(Disease)+P(Positive|Health)P(Health)}$$
 
@@ -124,13 +124,13 @@ The probability of the individual having disease with positive result is 19.92%.
 
 #### 7. 
 
-For $E(X)=3,\ E(x2)=13$,
+For $E(X)=3,\ E(x^2)=13$,
 
 $$Var(X)=E(X^2)−[E(X)]^2=13-9=4$$
 
-According to Chebyshev's Inequality: for constant k > 0, $P[|X−E(X)|\ge k]\le \frac{Var(X)}{k^2}$
+According to Chebyshev's Inequality: for constant k > 0, $P\left[|X−E(X)|\ge k\right]\le \frac{Var(X)}{k^2}$
 
-For lower bound by flipping the inequalities:$P[|X−E(X)|<k]>1-\frac{Var(X)}{k^2}$
+For lower bound by flipping the inequalities:$P\left[|X−E(X)|<k\right]\ge1-\frac{Var(X)}{k^2}$
 
 $$\therefore P(|X-3|<k)=P(3−k<X<k+3)\ge1−\frac4{k^2}$$
 
